--- a/src/index.css
+++ b/src/index.css
@@ -5,19 +5,47 @@
 }
 .name{
     font-size: 1rem;
-    color: rgba(0, 0, 21, 0.5);
-    padding-right: 0.5rem;
+    /* color: rgba(0, 0, 21, 0.5); */
+    width: 90vw;
+    color: #fff;
+    padding: 10px 20px;
+    /* padding-right: 0.5rem; */
     /* margin-top: -10px; */
     margin-left: 10px;
     padding-bottom: 0.5rem;
     font-weight: 420;
     line-height: 2;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    background-color: #3c4b64;;
 }
-.icon {
-    background-color: white;
-    width: fit-content;
-    padding: 8px;
-    border-radius: 50%;
-    color: rgba(0, 0, 21, 0.5);
+
+.action {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+   width: 80vw;
 }
+
+.upload,.download{
+    width: 500px;
+    color:#48b3dd;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 4px dotted rgb(160, 160, 167);
+    height: 500px;
+    margin-left: 20px;
+    cursor: pointer;
+}
+.text {
+    color: white;
+    background-color:#7bb274;
+    font-size: 24px;
+    font-weight: 700;
+    border-radius: 8px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    padding: 10px 20px;
+}
+
